update to tailwindcss 1.4.1

--- a/src/css/style.tailwind.css
+++ b/src/css/style.tailwind.css
@@ -1,10 +1,11 @@
-/* purgecss start ignore */
 @import "tailwindcss/base";
 @import "tailwindcss/components";
-/* purgecss end ignore */
 @import "tailwindcss/utilities";
 
 /* custom css */
 body{
   border: 10px solid white;
+}
+::selection {
+  background: yellow;
 }
